fix(ci): deterministic struct_ops field order + correct javadoc path
Two CI failures fixed:

1. SchedulerCodegenParityTest: PROPERTY_OVERRIDES used java.util.Map.of()
   which is unordered — struct_ops initializer fields (flags/timeout_ms/name)
   emitted in a different order on each JVM run. Switch to a LinkedHashMap
   so the order matches the golden (timeout_ms, name, flags).

2. Deploy docs: "Copy JavaDoc into site" used wrong path
   bpf/target/reports/apidocs; javadoc:javadoc writes to
   bpf/target/site/apidocs (maven-javadoc-plugin default).